# wanna

./: Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: build-test.yml
src/: cli.rs  data.rs  main.rs  things.rs
